[x86] mce/amd: Fix the thresholding machinery initialization order

Message-id: <20190315222102.13986-6-ghook@redhat.com>
Patchwork-id: 246329
O-Subject: [RHEL7.7 BZ 1685269 5/8] x86/MCE/AMD: Fix the thresholding machinery initialization order
Bugzilla: 1685269
RH-Acked-by: David Arcari <darcari@redhat.com>
RH-Acked-by: Dean Nelson <dnelson@redhat.com>

From: Borislav Petkov <bp@suse.de>

Bugzilla: https://bugzilla.redhat.com/show_bug.cgi?id=1685269
Upstream Status: v4.20-rc5
Build Info: https://brewweb.engineering.redhat.com/brew/taskinfo?taskID=20582067
Conflicts: Upstream checks the threshold vector differently then RHEL 7. This
patch differs in how it accomplishes the same end result, that of utilizing a
new thresholding_irq_en variable. With the new check in place, the specific
test of mce_threshold_vector is no longer needed.

commit 60c8144afc287ef09ce8c1230c6aa972659ba1bb
Author: Borislav Petkov <bp@suse.de>
Date:   Tue Nov 27 14:41:37 2018 +0100

    x86/MCE/AMD: Fix the thresholding machinery initialization order

    Currently, the code sets up the thresholding interrupt vector and only
    then goes about initializing the thresholding banks. Which is wrong,
    because an early thresholding interrupt would cause a NULL pointer
    dereference when accessing those banks and prevent the machine from
    booting.

    Therefore, set the thresholding interrupt vector only *after* having
    initialized the banks successfully.

    Fixes: 18807ddb7f88 ("x86/mce/AMD: Reset Threshold Limit after logging error")
    Reported-by: Rafa Miecki <rafal@milecki.pl>
    Reported-by: John Clemens <clemej@gmail.com>
    Signed-off-by: Borislav Petkov <bp@suse.de>
    Tested-by: Rafa Miecki <rafal@milecki.pl>
    Tested-by: John Clemens <john@deater.net>
    Cc: Aravind Gopalakrishnan <aravindksg.lkml@gmail.com>
    Cc: linux-edac@vger.kernel.org
    Cc: stable@vger.kernel.org
    Cc: Tony Luck <tony.luck@intel.com>
    Cc: x86@kernel.org
    Cc: Yazen Ghannam <Yazen.Ghannam@amd.com>
    Link: https://lkml.kernel.org/r/20181127101700.2964-1-zajec5@gmail.com
    Link: https://bugzilla.kernel.org/show_bug.cgi?id=201291

Signed-off-by: Gary R Hook <ghook@redhat.com>

Cc: Prarit Bhargava <prarit@redhat.com>
Cc: David Arcari <darcari@redhat.com>
Cc: Gary R Hook <ghook@redhat.com>
Signed-off-by: Bruno E. O. Meneguele <bmeneg@redhat.com>